--- a/GitHub.yaml
+++ b/GitHub.yaml
@@ -1,3 +1,5 @@
 payload:
 - DOMAIN-SUFFIX,github.com
 - DOMAIN-SUFFIX,githubusercontent.com
+- DOMAIN-SUFFIX,githubassets.com
+- DOMAIN-SUFFIX,octocaptcha.com
