--- a/GitHub.yaml
+++ b/GitHub.yaml
@@ -3,3 +3,4 @@ payload:
 - DOMAIN-SUFFIX,githubusercontent.com
 - DOMAIN-SUFFIX,githubassets.com
 - DOMAIN-SUFFIX,octocaptcha.com
+- DOMAIN-SUFFIX,github.io
