--- a/GitHub.yaml
+++ b/GitHub.yaml
@@ -4,4 +4,4 @@ payload:
 - DOMAIN-SUFFIX,githubassets.com
 - DOMAIN-SUFFIX,octocaptcha.com
 - DOMAIN-SUFFIX,github.io
-- DOMAIN-SUFFIXimgur.com
+- DOMAIN-SUFFIX,imgur.com
