--- a/Videos.yaml
+++ b/Videos.yaml
@@ -5,3 +5,4 @@ payload:
 - DOMAIN-SUFFIX,nflxext.com
 - DOMAIN-SUFFIX,onetrust.com
 - DOMAIN-SUFFIX,nflximg.net
+- DOMAIN-SUFFIX,youtube-nocookie.com
