--- a/Videos.yaml
+++ b/Videos.yaml
@@ -7,4 +7,5 @@ payload:
 - DOMAIN-SUFFIX,nflximg.net
 # YouTube
 - DOMAIN-SUFFIX,youtube.com
+- DOMAIN-SUFFIX,googlevideo.com
 - DOMAIN-SUFFIX,youtube-nocookie.com
