--- a/Google.yaml
+++ b/Google.yaml
@@ -3,3 +3,4 @@ payload:
 - DOMAIN-SUFFIX,google.com
 - DOMAIN-SUFFIX,ytimg.com #图片托管
 - DOMAIN-SUFFIX,googleusercontent.com
+- DOMAIN-SUFFIX,gravatar.com #头像
