--- a/Videos.yaml
+++ b/Videos.yaml
@@ -9,3 +9,4 @@ payload:
 - DOMAIN-SUFFIX,youtube.com
 - DOMAIN-SUFFIX,googlevideo.com
 - DOMAIN-SUFFIX,youtube-nocookie.com
+- DOMAIN-SUFFIX,ggpht.com
