--- a/Google.yaml
+++ b/Google.yaml
@@ -2,6 +2,7 @@ payload:
 # Netflix
 - DOMAIN-SUFFIX,google.com
 - DOMAIN-SUFFIX,google.com.sg
+- DOMAIN-SUFFIX,googleapis.com
 - DOMAIN-SUFFIX,ytimg.com #图片托管
 - DOMAIN-SUFFIX,googleusercontent.com
 - DOMAIN-SUFFIX,gravatar.com #头像
