--- a/Google.yaml
+++ b/Google.yaml
@@ -4,5 +4,6 @@ payload:
 - DOMAIN-SUFFIX,google.com.sg
 - DOMAIN-SUFFIX,googleapis.com
 - DOMAIN-SUFFIX,ytimg.com #图片托管
+- DOMAIN-SUFFIX,gstatic.com #静态文件托管
 - DOMAIN-SUFFIX,googleusercontent.com
 - DOMAIN-SUFFIX,gravatar.com #头像
