--- a/Google.yaml
+++ b/Google.yaml
@@ -2,6 +2,7 @@ payload:
 # Google
 - DOMAIN-SUFFIX,google.com
 - DOMAIN-SUFFIX,google.com.sg
+- DOMAIN-SUFFIX,google.co.jp
 - DOMAIN-SUFFIX,googleapis.com
 - DOMAIN-SUFFIX,ytimg.com #图片托管
 - DOMAIN-SUFFIX,gstatic.com #静态文件托管
