--- a/Google.yaml
+++ b/Google.yaml
@@ -1,6 +1,7 @@
 payload:
 # Google
 - DOMAIN-SUFFIX,google.com
+- DOMAIN-SUFFIX,google.com.hk
 - DOMAIN-SUFFIX,google.com.sg
 - DOMAIN-SUFFIX,google.co.jp
 - DOMAIN-SUFFIX,googleapis.com
