--- a/Videos.yaml
+++ b/Videos.yaml
@@ -7,6 +7,7 @@ payload:
 - DOMAIN-SUFFIX,nflximg.net
 # YouTube
 - DOMAIN-SUFFIX,youtube.com
+- DOMAIN-SUFFIX,youtu.be
 - DOMAIN-SUFFIX,googlevideo.com
 - DOMAIN-SUFFIX,youtube-nocookie.com
 - DOMAIN-SUFFIX,ggpht.com
