--- a/AI.yaml
+++ b/AI.yaml
@@ -9,3 +9,9 @@ payload:
 - DOMAIN-SUFFIX,telegram.me
 - DOMAIN-SUFFIX,t.me
 - IP-CIDR,149.154.175.50 #tg
+- IP-CIDR,149.154.167.51 #tg
+- IP-CIDR,149.154.171.5 #tg
+- IP-CIDR,95.161.76.100 #tg
+- IP-CIDR,149.154.167.91 #tg
+- IP-CIDR,149.154.175.50 #tg
+- IP-CIDR,149.154.175.50 #tg
