--- a/AI.yaml
+++ b/AI.yaml
@@ -13,3 +13,4 @@ payload:
 - IP-CIDR,149.154.171.5/32 #tg
 - IP-CIDR,95.161.76.100/32 #tg
 - IP-CIDR,149.154.167.91/32 #tg
+- IP-CIDR,91.108.56.150/32 #tg
