--- a/AI.yaml
+++ b/AI.yaml
@@ -14,4 +14,4 @@ payload:
 - IP-CIDR,149.154.167.91/32 #tg
 - IP-CIDR,95.161.76.100/32 #tg
 - IP-CIDR,91.108.56.150/32 #tg
-- IP-CIDR,91.108.56.177
+- IP-CIDR,91.108.56.177/32 #tg
