--- a/AI.yaml
+++ b/AI.yaml
@@ -8,6 +8,7 @@ payload:
 - DOMAIN-SUFFIX,telegram.org
 - DOMAIN-SUFFIX,telegram.me
 - DOMAIN-SUFFIX,t.me
+- IP-CIDR,149.154.167.41/32 #tg
 - IP-CIDR,149.154.167.51/32 #tg
 - IP-CIDR,149.154.167.91/32 #tg
 - IP-CIDR,149.154.171.5/32 #tg
