--- a/AI.yaml
+++ b/AI.yaml
@@ -16,3 +16,4 @@ payload:
 - IP-CIDR,95.161.76.100/32 #tg
 - IP-CIDR,91.108.56.150/32 #tg
 - IP-CIDR,91.108.56.177/32 #tg
+- IP-CIDR,91.108.56.180/32 #tg
