--- a/AI.yaml
+++ b/AI.yaml
@@ -14,7 +14,7 @@ payload:
 - IP-CIDR,149.154.167.222/32 #tg
 - IP-CIDR,149.154.171.5/32 #tg
 - IP-CIDR,149.154.175.50/32 #tg
-- IP-CIDR,149.154.175.53
+- IP-CIDR,149.154.175.53/32 #tg
 - IP-CIDR,95.161.76.100/32 #tg
 - IP-CIDR,91.108.56.150/32 #tg
 - IP-CIDR,91.108.56.177/32 #tg
