--- a/AI.yaml
+++ b/AI.yaml
@@ -11,6 +11,7 @@ payload:
 - IP-CIDR,149.154.167.41/32 #tg
 - IP-CIDR,149.154.167.51/32 #tg
 - IP-CIDR,149.154.167.91/32 #tg
+- IP-CIDR,149.154.167.92/32 #tg
 - IP-CIDR,149.154.167.222/32 #tg
 - IP-CIDR,149.154.171.5/32 #tg
 - IP-CIDR,149.154.175.50/32 #tg
