--- a/AI.yaml
+++ b/AI.yaml
@@ -14,3 +14,5 @@ payload:
 - IP-CIDR,91.108.16.0/22 #tg
 - IP-CIDR,91.108.56.0/22 #tg
 - IP-CIDR,149.154.160.0/20 #tg
+# Copilot
+- DOMAIN-SUFFIX,copilot.microsoft.com
